# cide

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Readme.md
cmake/: FindClang.cmake  FindLibgit2.cmake
other/: git_diff_qrawfont
resources_packed/: cide.icns  cide.rc  convert_svg_to_icns.sh  resources.qrc
src/cide/: about_dialog.cc  about_dialog.h  argument_hint_widget.cc  argument_hint_widget.h  build_target_list_widget.cc  build_target_list_widget.h  build_target_selector.cc  build_target_selector.h  clang_highlighting.cc  clang_highlighting.h  clang_index.cc  clang_index.h  clang_parser.cc  clang_parser.h  clang_tu_pool.cc  clang_tu_pool.h  clang_utils.cc  clang_utils.h  code_completion_widget.cc  code_completion_widget.h  code_info.cc  code_info.h  code_info_code_completion.cc  code_info_code_completion.h  code_info_get_info.cc  code_info_get_info.h  code_info_get_right_click_info.cc  code_info_get_right_click_info.h  code_info_goto_referenced_cursor.cc  code_info_goto_referenced_cursor.h  cpp_utils.cc  cpp_utils.h  crash_backup.cc  crash_backup.h  create_class.cc  create_class.h  document.cc  document.h  document_location.h  document_range.cc  (+56 more)
src/git_version_tool/: main.cc
